src/include/kdb.h

/*
The key flags bit array. The '.' means whatever:

7654 3210 7654 3210 7654 3210 7654 3210
...1 0... .0.. .1.. ..1. ..0. ...0 1... 0x10042008 Initialized
...1 1... .1.. .1.. ..1. ..1. ...1 1... 0x18442218 Initialized mask
.... .... .... .... .... .... .... ...1 0x00000001 TYPE
.... .... .... .... .... .... .... ..1. 0x00000002 NAME
.... .... .... .... .... .... .... .1.. 0x00000004 VALUE
.... .... .... .... .... .... ..1. .... 0x00000020 DOMAIN
.... .... .... .... .... .... .1.. .... 0x00000040 COMMENT
.... .... .... .... .... .... 1... .... 0x00000060 UID
.... .... .... .... .... ...1 .... .... 0x00000080 GID
.... .... .... .... .... .1.. .... .... 0x00000400 PRM
.... .... .... .... .... 1... .... .... 0x00000800 TIME
.... .... .... .... ...1 .... .... .... 0x00001000 NEEDSYNC
.... .... .... .... .1.. .... .... .... 0x00004000 ACTIVE ***DEPRECATED***
.... .... 1... .... .... .... .... .... 0x00800000 ISSYSTEM
.... ...1 .... .... .... .... .... .... 0x01000000 ISUSER
1... .... .... .... .... .... .... .... 0x80000000 FLAG (general flag)
*/



/**
 * Switches to denote the various Key attributes in methods throughout
 * this library.
 * @ingroup key
 * @see keyNew()
 * @see keyCompare()
 * @see kdbMonitorKey(), kdbMonitorKeys(), the diffMask parameter
 * @see keyGetFlag(), keySetFlag()
 */
enum KeySwitch {
	KEY_SWITCH_TYPE=1,          /*!< Flag for the key type */
	KEY_SWITCH_NAME=1<<1,       /*!< Flag for the key name */
	KEY_SWITCH_VALUE=1<<2,      /*!< Flag for the key data */
	/* do not use 1<<3 see INITMASK */
	/* do not use 1<<4 see INITMASK */
	KEY_SWITCH_OWNER=1<<5,      /*!< Flag for the key user domain */
	KEY_SWITCH_DOMAIN=KEY_SWITCH_OWNER, /*!< An alias */
	KEY_SWITCH_COMMENT=1<<6,    /*!< Flag for the key comment */
	KEY_SWITCH_UID=1<<7,        /*!< Flag for the key UID */
	KEY_SWITCH_GID=1<<8,        /*!< Flag for the key GID */
	/* do not use 1<<9 see INITMASK */
	KEY_SWITCH_MODE=1<<10,      /*!< Flag for the key permissions */
	KEY_SWITCH_TIME=1<<11,      /*!< Flag for the key change time */
	KEY_SWITCH_NEEDSYNC=1<<12,  /*!< Flags that key needs syncronization */
	/* do not use 1<<13 see INITMASK */
	KEY_SWITCH_ACTIVE=1<<14,    /* ****deprecated**** */
	KEY_SWITCH_UMODE=1<<15,     /*!< Flag for key permissions based on umask */
	/* do not use 1<<18 see INITMASK */
	/* do not use 1<<22 see INITMASK */
	KEY_SWITCH_ISSYSTEM=1<<23,  /*!< Flag to denote a @c "system" key */
	KEY_SWITCH_ISUSER=1<<24,    /*!< Flag to denote a @c "user" key */
	/* do not use 1<<27 see INITMASK */
	/* do not use 1<<28 see INITMASK */
	KEY_SWITCH_FLAG=1<<31,      /*!< General purpose flag that has semantics
	                                 only to your app */
	KEY_SWITCH_END=0,           /*!< Used as a parameter terminator to
	                                 keyNew() */
	
	KEY_SWITCH_INITIALIZED=0x10042008,
	KEY_SWITCH_INITMASK=0x18442218
};
/**
 * Options to change the default behavior of some methods.
 *
 * These options should be ORed.
 * @ingroup kdb
 * @see kdbGetChildKeys()
 * @see ksToStream()
 * @see keyToStream()
 */
enum KDBOptions {
	KDB_O_RECURSIVE=1,       /*!< Act recursively. */
	KDB_O_DIR=1<<1,          /*!< Include dir keys in result. */
	KDB_O_DIRONLY=1<<2,      /*!< Retrieve only directory keys. */
	KDB_O_NOEMPTY=1<<3,      /* unused. */
	KDB_O_STATONLY=1<<4,     /*!< Only stat key, instead of getting entirelly.*/
	KDB_O_INACTIVE=1<<5,     /*!< Do not ignore inactive keys (that name begins
	                              with .). */
	KDB_O_SORT=1<<6,         /*!< Sort keys. */
	KDB_O_NFOLLOWLINK=1<<7,  /*!< Do not follow symlinks. */

/* XML exporting options for keyToStrem() and ksToStream() */
	KDB_O_CONDENSED=1<<8,    /*!< Compressed XML, not usefull for human eyes.*/
	KDB_O_NUMBERS=1<<9,      /*!< Use numbers intead of user and group names.*/
	KDB_O_XMLHEADERS=1<<10,  /*!< Show also the XML header of the document. */
	KDB_O_FULLNAME=1<<11,    /*!< Export @p user keys using full name
	                              (e.g. user:username/some/key). */
	KDB_O_FULLUGID=1<<12,    /*!< Don't supress obvious key UID,
	                              GID, and user domain. Affects
	                              only @p user keys. */
	KDB_O_HIER=1<<13,        /*!< Export to the new hierarchical XML
	                              representation using key basename.
	                              See ksToStream(). */

/* Options used by ksLookupRE() methods */
	KDB_O_NOCASE=1<<15,      /*!< Ignore case in ksLookup*() methods */
	KDB_O_NOSPANPARENT=1<<16,/*!< Don't continue search if end of current
	                              folder reached, in ksLookupRE() */
	KDB_O_ALL=1<<17,         /*!< Restart search, in ksLookup*() from
	                              start -> cursor when cursor -> end
	                              failed */

/* Obsolete/renamed options */
	KDB_O_NOVALUE  = KDB_O_DIRONLY,
	KDB_O_LOOP     = KDB_O_ALL

};
/* Key Name Anatomy

Key::key is the key name. It is a unique identifier for a kdb key.
An exmaple of a complex key name is:

	user:some.user/My Environment/SOME.VAR

From this example:
  Root name = "user:some.user"
      Owner = "some.user"
  Base name = "SOME.VAR"
Parent name = "user:some.user/My Environment"

*/





typedef struct _Key       Key;
typedef struct _KeySet    KeySet;
/* If we are not in a backend implementation context... */
typedef void *            KDBHandle;
/**************************************

KeyDB methods

***************************************/

int kdbOpen(KDBHandle *handle);
int kdbClose(KDBHandle *handle);
int kdbRename(KDBHandle handle, Key *key, const char *newName);
int kdbRemoveKey(KDBHandle handle, const Key *key);
int kdbLink(KDBHandle handle, const char *oldPath, const char *newKeyName);
int kdbStatKey(KDBHandle handle, Key *key);
int kdbGetKey(KDBHandle handle, Key *key);
int kdbSetKey(KDBHandle handle, Key *key);
ssize_t kdbGetKeyChildKeys(KDBHandle handle, const Key *parentName,
	KeySet *returned, unsigned long options);
int kdbSetKeys(KDBHandle handle, KeySet *ks);
/**************************************

Error manipulation methods

***************************************/


char *kdbStrError(int errnum);
Key *keyNew(const char *keyName, ...);
int keyDel(Key *key);
ssize_t keyGetFullNameSize(const Key *key);
ssize_t keySetName(Key *key, const char *newName);
ssize_t keyGetFullName(const Key *key, char *returnedName, size_t maxSize);
ssize_t keyGetRootName(const Key *key, char *returned, size_t maxSize);
ssize_t keyGetFullRootName(const Key *key, char *returned, size_t maxSize);
ssize_t keyAddBaseName(Key *key,const char *baseName);
ssize_t keySetBaseName(Key *key,const char *baseName);
ssize_t keyGetParentName(const Key *key, char *returned, size_t maxSize);
ssize_t keyGetParentNameSize(const Key *key);
ssize_t keyGetRootNameSize(const Key *key);
ssize_t keyGetFullRootNameSize(const Key *key);
int keyNameIsSystem(const char *keyName);
int keyNameIsUser(const char *keyName);
/*
void *keySerialize(Key *key);
Key *keyUnserialize(void *serialized);
*/

/**************************************

KeySet methods

***************************************/

KeySet *ksNew();
int ksDel(KeySet *ks);
ssize_t ksGetSize(KeySet *ks);
ssize_t ksInsert(KeySet *ks, Key *toInsert);
ssize_t ksAppend(KeySet *ks, Key *toAppend);
Key *ksPop(KeySet *ks);
ssize_t ksInsertKeys(KeySet *ks, KeySet *toInsert);
int ksCompare(KeySet *ks1, KeySet *ks2, KeySet *removed);
void ksSort(KeySet *ks);
Key *ksLookupByName(KeySet *ks, const char *name,unsigned long options);
	
int ksRewind(KeySet *ks);
Key *ksNext(KeySet *ks);
Key *ksCurrent(const KeySet *ks);
Key *ksHead(KeySet *ks);
Key *ksTail(KeySet *ks);