src/include/elektra/core/key.h

/* Name Manipulation Methods */
const char * keyName (const Key * key);
const char * keyBaseName (const Key * key);